<resources>
  <string name="pc300_help">说明：\n1、PC300设备共可测量血压、血氧、体温、脉率、心电。\n2、右上角显示与设备的连接状态。如果处于未连接状态，可按查找设备，选择设备连接。\n3、除心电外的其他5项，测试完后，按上传数据即可上传（只上传有测量数据的项）。心电测量完毕后，会弹出测量结果对话框，提示是否上传。\n3、上传后，蓝色按钮变绿表示上传成功，红色表示上传失败，不变色表示没有上传数据。</string>
    <string name="app_name">村医健康</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="hint1">请根据近一年的体验和感觉，回答以下问题。 </string>
	<string name="hint2"> 1 星 没有(根本不/从来没有)  2星 很少(有一点/偶尔) 3星 有时(有些/少数时间) 4星 经常(相当/多数时间) 5星 总是(非常/每天)</string>
    <string name="add_new_user">添加用户</string>
    <string name="health_measuer">健康测量</string>
    <string name="measuer_history">测量记录</string>
    <string name="delete_user">删除用户</string>
    <string name="user_detail">详细资料</string>
    <string name="my_calendar">我的日程</string>
    <string name="tools">工具箱</string>
    <string name="user_list">用户列表</string>
    <string name="remote_ask">远程咨询</string>
    <string name="hello">Hello World, main!</string>
    <string name="bp">血压</string>
    <string name="temp">体温</string>
    <string name="bo">血氧</string>
    <string name="pulse">脉率</string>
    <string name="ua">尿酸</string>
    <string name="glu">血糖</string>
    <string name="chol">总胆固醇</string>
    <string name="urine">尿常规</string>
    <string name="wbc">白细胞</string>
    <string name="myhealth">我的健康</string>
    <string name="test">进行测试</string>
    <string name="teleference">远程医疗</string>
    <string name="calendar">日程表</string>
    <string name="healthinformation">健康咨迅</string>
    <string name="healthknowledge">健康知识</string>
    <string name="testrecord">测量记录</string>
    <string name="healthreport">健康报告</string>
    <string name="test_xueya">血压测量</string>
    <string name="test_xueyang">血氧测量</string>
    <string name="test_xindian">心电测量</string>
    <string name="test_taixin">胎心测量</string>
    <string name="test_zhifang">脂肪仪</string>
    <string name="appname">益体康蓝牙设备演示</string>
    <string name="bp_show">蓝牙血压演示</string>
    <string name="ecg">蓝牙心电演示</string>
    <string name="open">打开设备</string>
    <string name="close">关闭设备</string>
    <string name="title_paired_devices">已配对设备</string>
    <string name="title_other_devices">可用设备</string>
    <string name="button_scan">查找设备</string>
    <string name="scanning">查找中</string>
    <string name="none_paired">无配对设备</string>
    <string name="select_device">选择设备</string>
    <string name="none_found">未发现设备</string>
    <string name="bt_not_enabled">本机无蓝牙</string>
    <string name="sys">收缩压</string>
    <string name="dia">舒张压</string>
    <string name="start_measurement">开始测量</string>
    <string name="find_device">查找设备</string>
    <string name="connecting">正在连接</string>
    <string name="unconnect">未连接</string>
    <string name="BluetoothAdapterNotFound">Bluetooth Adapter Not Found.Bluetooth Not Supported</string>
    <string name="UnableToStartServiceDiscovery">Bluetooth is not started，please open</string>
    <string name="CreateSocketFailed">Create Socket Failed</string>
    <string name="ServiceDiscoveryFailed">Service Discovery Failed，check whether the measuring instruments are open</string>
    <string name="CreateStreamFailed">Create Stream Failed</string>
    <string name="DeviceDisconnected">Device Disconnected</string>
    <string name="NetworkDisconneted">Network Disconnected,data could not be upload</string>
    <string name="ecg_device">ECG MAC address</string>
    <string name="ecg_list">Received Document List</string>
    <string name="ecg_current">Transfer Progress</string>
    <string name="ecg_total">Total Transfer Progress</string>
    <string name="ecg_choose">Please Select</string>
    <string name="ecg_view">Check ECG data</string>
    <string name="ecg_delete">Delete the current data</string>
    <string name="ecg_clear">Clear all the data</string>
    <string name="bp_device">BPG MAC address</string>
    <string name="bp_sbp">SBP</string>
    <string name="bp_dbp">DBP</string>
    <string name="bp_pr">Pulse Rate</string>
    <string name="main_welcome">Welcome</string>
    <string name="myhealth_title">My Health</string>
    <string name="myhealth_healthreport_title">Health Report</string>
    <string name="myhealth_healthreport_testitemtitle">Test Items</string>
    <string name="myhealth_healthreport_testresulttitle">Test Result</string>
    <string name="myhealth_healthreport_reference">Reference</string>
    <string name="myhealth_healthreport_Weight">Weight</string>
    <string name="myhealth_healthreport_BloodPressure">PR</string>
    <string name="myhealth_healthreport_BloodOxygen">Oximeter</string>
    <string name="myhealth_healthreport_PulseRate">BR</string>
    <string name="myhealth_healthreport_ZhiFangLv">Fat Rate</string>
    <string name="myhealth_healthreport_BMI">BMI</string>
    <string name="myhealth_healthreport_XueTang">Blood Sugar</string>
    <string name="myhealth_healthreport_TiWen">BT</string>
    <string name="myhealth_healthreport_TaiXin">FHR</string>
    <string name="myhealth_healthreport_expertsuggest">Expert Tips</string>
    <string name="myhealth_healthreport_xueyabiaozhun">SBP:90-140 mmHg\nDBP:60-90mmHg</string>
    <string name="myhealth_healthreport_mailvbiaozhun">60-100 bmp</string>
    <string name="myhealth_healthreport_zhifanglvbiaozhun">21-34%</string>
    <string name="myhealth_healthreport_tizhongbiaozhun">kg</string>
    <string name="myhealth_healthreport_xuetangbiaozhun">空腹3.9-6.1餐后3.9-7.8mmol/L</string>
    <string name="myhealth_healthreport_xueyangbiaozhun">94-98%</string>
    <string name="myhealth_healthreport_tiwenbiaozhun">36.2-37.5℃</string>
    <string name="myhealth_healthreport_taixinbiaozhun">120-160 bmp</string>
    <string name="myhealth_healthreport_gaoya">SBP：</string>
    <string name="myhealth_healthreport_diya">DBP：</string>
    <string name="myhealth_healthreport_Name">Name:</string>
    <string name="myhealth_healthreport_Sex">Sex:</string>
    <string name="myhealth_healthreport_Age">Age:</string>
    <string name="myhealth_healthreport_IDCardNo">ID Card No:123456123445678907</string>
    <string name="myhealth_healthreport_Address">Address:SiChuan Province</string>
    <string name="myhealth_healthreport_BasicParameter">Basic Parameter</string>
    <string name="myhealth_healthreport_Height">Height:173mm</string>
    <string name="myhealth_healthreport_BloodType">Blood Type:B</string>
    <string name="myhealth_healthreport_History">History</string>
    <string name="myhealth_healthreport_expertempty">No Suggestions</string>
    <string name="myhealth_healthreport_alarmalerttitle">You have new health report!</string>
    <string name="myhealth_testrecord_BloodPressure">B.P</string>
    <string name="myhealth_testrecord_HeartRate">H.R</string>
    <string name="myhealth_testrecord_Electrocardio">ECG</string>
    <string name="myhealth_testrecord_BloodOxygen">Oximeter</string>
    <string name="myhealth_testrecord_PulseRate">P.R</string>
    <string name="myhealth_testrecord_FetalHeart">F.G.R</string>
    <string name="myhealth_testrecord_BodyTemperature">B.T</string>
    <string name="myhealth_testrecord_Weight">Weight</string>
    <string name="myhealth_testrecord_Height">Height</string>
    <string name="myhealth_testrecord_TheLastWeek">  Last Week  </string>
    <string name="myhealth_testrecord_TheLastMonth"> Last Month </string>
    <string name="myhealth_testrecord_TheLastQuarter">Last Qtr</string>
    <string name="myhealth_testrecord_Normal">Normal</string>
    <string name="myhealth_testrecord_OnTheHighSide"> Higher </string>
    <string name="myhealth_testrecord_OnTheLowSide"> Lower </string>
    <string name="myhealth_testrecord_BloodPressure_TestTime">Test Time</string>
    <string name="myhealth_testrecord_BloodPressure_MaximumPressure">SBP(mmHg)</string>
    <string name="myhealth_testrecord_BloodPressure_MinimumPressure">DBP(mmHg)</string>
    <string name="myhealth_testrecord_HeartRate_TestTime">Test Time</string>
    <string name="myhealth_testrecord_HeartRate_HeartRate">HR(/minute)</string>
    <string name="myhealth_testrecord_ZhifangRate">Fat Rate</string>
    <string name="myhealth_testrecord_Xuetang">Blood Sugar</string>
    <string name="myhealth_testrecord_title">Measuring Record</string>
    <string name="myhealth_test_xueya_buzou1">Open the BPG</string>
    <string name="myhealth_test_xueya_buzou2">Start</string>
    <string name="myhealth_test_xueya_buzou3">Stored  Automatically</string>
    <string name="myhealth_test_xueya_tishi">Open the blue tooth on the device，click next</string>
    <string name="myhealth_test_xueya_Next">NEXT</string>
    <string name="myhealth_test_zhifang_buzou1">Open the Fat Monitor</string>
    <string name="myhealth_test_zhifang_buzou2">Start</string>
    <string name="myhealth_test_zhifang_buzou3">Stored  Automatically</string>
    <string name="myhealth_test_zhifang_tishi">Open the blue tooth on the device，click next</string>
    <string name="myhealth_test_zhifang1_titleunit">Fat Rate(%)</string>
    <string name="myhealth_test_tizhong_buzou1">Open the Scale</string>
    <string name="myhealth_test_tizhong_buzou2">Start</string>
    <string name="myhealth_test_tizhong_buzou3">Stored  Automatically</string>
    <string name="myhealth_test_tizhong_tishi">Open the blue tooth on the device，click next</string>
    <string name="myhealth_test_tizhong1_titleunit">Weight(kg)</string>
    <string name="myhealth_test_xindian_buzou1">Open the ECG</string>
    <string name="myhealth_test_xindian_buzou2">Start</string>
    <string name="myhealth_test_xindian_buzou3">Stored  Automatically</string>
    <string name="myhealth_test_xindian_tishi">Open the blue tooth on the device，click next</string>
    <string name="myhealth_test_xuetang_buzou1">Open the Glucometer</string>
    <string name="myhealth_test_xuetang_buzou2">Start</string>
    <string name="myhealth_test_xuetang_buzou3">Stored  Automatically</string>
    <string name="myhealth_test_xuetang_tishi">Open the blue tooth on the device，click next</string>
    <string name="myhealth_test_xuetang1_titleunit">Blood Sugar(mmol/L)</string>
    <string name="myhealth_test_xueyang_buzou1">Open the Oximeter</string>
    <string name="myhealth_test_xueyang_buzou2">Start</string>
    <string name="myhealth_test_xueyang_buzou3">Stored  Automatically</string>
    <string name="myhealth_test_xueyang_tishi">Open the blue tooth on the device，click next</string>
    <string name="myhealth_test_xueyang1_titleunit">Blood Oxygen (%)</string>
    <string name="myhealth_test_taixin_buzou1">Open the Urine Analyzer Device</string>
    <string name="myhealth_test_taixin_buzou2">Start</string>
    <string name="myhealth_test_taixin_buzou3">Stored  Automatically</string>
    <string name="myhealth_test_taixin_tishi">Open the blue tooth on the device，click next</string>
    <string name="myhealth_test_taixin1_titleunit">Fetal Heart Rate(bpm)</string>
    <string name="myhealth_test_xindian_buzou">1 Start the ECG monitor\n\n2 Begin to measure\n\n3 Send the result</string>
    <string name="myhealth_test_xindian_PicText">Select "ambulatory monitoring" in the main menu</string>
    <string name="myhealth_test_xindian_Next">NEXT</string>
    <string name="medical_calendar_ButtonTiJian">Checkup</string>
    <string name="medical_calendar_ButtonFuYao">Medicine</string>
    <string name="medical_calendar_ShangWu">Morning Checkup:</string>
    <string name="medical_calendar_WanShang">Evening Checkup：</string>
    <string name="medical_calendar_YuShe">Preset Reminder:</string>
    <string name="medical_calendar_Date">Date of Checkup:</string>
    <string name="medical_calendar_To">To</string>
    <string name="teleference_xiugaidialog_input">Please input</string>
    <string name="teleference_xiugaidialog_name">Name</string>
    <string name="teleference_xiugaidialog_phone">Phone</string>
    <string name="myhealth_Welcome">Welcome</string>
    <string name="user_name"></string>
</resources>