<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background" >

    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/topbar_height"
        android:layout_alignParentTop="true"
        android:background="@drawable/topbg"
        android:gravity="center_vertical" >
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/bottombar"
        android:layout_below="@+id/topbar"
        android:background="@drawable/centerbg"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:background="@drawable/cont_bg03"
            android:gravity="center"
            android:padding="5dp"
            android:visibility="gone" >

            <Button
                android:id="@+id/table_show"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_above="@+id/layout_heper"
                android:layout_margin="5dp"
                android:background="@drawable/button_selector"
                android:text="表格显示" />

            <TextView
                android:id="@+id/layout_heper"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

            <Button
                android:id="@+id/curve_show"
                android:layout_width="@dimen/button_width"
                android:layout_height="@dimen/button_height"
                android:layout_below="@+id/layout_heper"
                android:layout_margin="5dp"
                android:background="@drawable/button_selector"
                android:text="曲线显示" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="3dp" >

            <HorizontalScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="1dp" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/show_ecg"
                        android:layout_width="@dimen/button_width"
                        android:layout_height="@dimen/button_height"
                        android:layout_margin="5dp"
                        android:background="@drawable/button_selector"
                        android:text="心电"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/show_bp"
                        android:layout_width="@dimen/button_width"
                        android:layout_height="@dimen/button_height"
                        android:layout_margin="5dp"
                        android:background="@drawable/button_selector"
                        android:text="@string/bp" />

                    <Button
                        android:id="@+id/show_pulse"
                        android:layout_width="@dimen/button_width"
                        android:layout_height="@dimen/button_height"
                        android:layout_margin="5dp"
                        android:background="@drawable/button_selector"
                        android:text="@string/pulse" />

                    <Button
                        android:id="@+id/show_bo"
                        android:layout_width="@dimen/button_width"
                        android:layout_height="@dimen/button_height"
                        android:layout_margin="5dp"
                        android:background="@drawable/button_selector"
                        android:text="@string/bo" />

                    <Button
                        android:id="@+id/show_temp"
                        android:layout_width="@dimen/button_width"
                        android:layout_height="@dimen/button_height"
                        android:layout_margin="5dp"
                        android:background="@drawable/button_selector"
                        android:text="@string/temp" />

                    <Button
                        android:id="@+id/show_glu"
                        android:layout_width="@dimen/button_width"
                        android:layout_height="@dimen/button_height"
                        android:layout_margin="5dp"
                        android:background="@drawable/button_selector"
                        android:text="@string/glu" />

                    <Button
                        android:id="@+id/show_ua"
                        android:layout_width="@dimen/button_width"
                        android:layout_height="@dimen/button_height"
                        android:layout_margin="5dp"
                        android:background="@drawable/button_selector"
                        android:text="@string/ua" />

                    <Button
                        android:id="@+id/show_chol"
                        android:layout_width="@dimen/button_width"
                        android:layout_height="@dimen/button_height"
                        android:layout_margin="5dp"
                        android:background="@drawable/button_selector"
                        android:text="@string/chol" />

                    <Button
                        android:id="@+id/show_wbc"
                        android:layout_width="@dimen/button_width"
                        android:layout_height="@dimen/button_height"
                        android:layout_margin="5dp"
                        android:background="@drawable/button_selector"
                        android:text="@string/wbc" />

                    <Button
                        android:id="@+id/show_urine"
                        android:layout_width="@dimen/button_width"
                        android:layout_height="@dimen/button_height"
                        android:layout_margin="5dp"
                        android:background="@drawable/button_selector"
                        android:text="@string/urine" />
                </LinearLayout>
            </HorizontalScrollView>

            <ListView
                android:id="@+id/show_table_listview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
            </ListView>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/bottombar"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/bottombar_height"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottombg" >

        <Button
            android:id="@+id/to_home_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/all_homebtn"
            android:visibility="gone" >
        </Button>

        <Button
            android:id="@+id/return_button"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/all_returnbtn"
            android:visibility="gone" >
        </Button>
    </RelativeLayout>

</RelativeLayout>