<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/topbar_height"
        android:background="@drawable/topbg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

      

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myhealth_Welcome"
                android:textColor="#fffdfdfd"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/user_name"
                android:textColor="#fffdfdfd"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/user_name_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:stretchColumns="*" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/users_button"
                android:layout_width="120dp"
                android:layout_height="150dp"
                android:layout_margin="30dp"
                android:background="@drawable/button_selector"
                android:onClick="jumpTo"
                android:text="@string/user_list" />

            <Button
                android:id="@+id/my_calendar_button"
                android:layout_width="120dp"
                android:layout_height="150dp"
                android:layout_margin="30dp"
                android:background="@drawable/main_calendarxml" />

            <Button
                android:id="@+id/tools_button"
                android:layout_width="120dp"
                android:layout_height="150dp"
                android:layout_margin="30dp"
                android:background="@drawable/button_selector"
                android:text="@string/tools" />

            <Button
                android:id="@+id/remote_ask_button"
                android:layout_width="120dp"
                android:layout_height="150dp"
                android:layout_margin="30dp"
                android:background="@drawable/main_teleferencexml" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottombar_height"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottombg"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>