<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ff6281aa">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:src="@drawable/xiugaidialog_icon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffffff"
            android:textSize="18px"
            android:layout_gravity="center"   
            android:text="@string/teleference_xiugaidialog_input"/>
            
    </LinearLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/xiugaidialog_line"/>
    

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_margin="15dp"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:textColor="#ffffffff"
        android:textSize="18px"
        android:id="@+id/personnameview"
        android:gravity="left"
        android:text="@string/teleference_xiugaidialog_name"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:layout_gravity="center"
        android:id="@+id/personnameedit"
        android:background="@drawable/xiugaidialog_editbg"
        android:gravity="fill_horizontal"
        android:scrollHorizontally="true"
        android:autoText="false"
        android:capitalize="none"/> 
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_marginLeft="15dp"     
        android:layout_marginRight="15dp" 
        android:layout_marginBottom="15dp" 
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:textColor="#ffffffff"
        android:textSize="18px"
        android:id="@+id/personnameview"
        android:gravity="left"
        android:text="@string/teleference_xiugaidialog_phone"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/personnumberedit"
        android:numeric="integer"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:background="@drawable/xiugaidialog_editbg"
        android:gravity="fill_horizontal"
        android:scrollHorizontally="true"
        android:autoText="false"
        android:capitalize="none"/>  
    </LinearLayout> 
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:background="#ffffffff"
        android:gravity="center"
        android:padding="5dp"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/xiugaidialog_savebtn"
            android:id="@+id/saveBtn"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/xiugaidialog_cancelbtn"
            android:id="@+id/cancelBtn"
            />
            
    </LinearLayout>

            
</LinearLayout>